Added very rudimentary add post functionality

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,4 +1,3 @@
 <h2>Substance</h2>
-<p>
-  Write a story, find a circle.
-</p>
+<p>Write a story, find a circle.</p>
+<%= link_to 'Sign Up', new_user_registration_path %> // <%= link_to 'Sign In', new_user_session_path %>
