--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,8 +8,9 @@
 </head>
 <body>
 
-<div class="alert alert-success"><%= flash[:notice] %></div>
-<div class="alert alert-danger"><%= flash[:alert] %></div>
+  <% flash.each do |name, msg| %>
+    <%= content_tag :div, msg, class: name %>
+  <% end %>
 
 <%= yield %>
 
