--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -1,4 +1,6 @@
 @import "bootstrap";
+@import '*';
+
 /*
  * This is a manifest file that'll be compiled into application.css, which will include all the files
  * listed below.
@@ -12,3 +14,229 @@
  *= require_self
  *= require_tree .
  */
+
+body {
+  font-family: "Roboto", "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
+ }
+
+input {
+  margin-bottom: 5px;
+  background: white;
+}
+
+a {
+  text-decoration: none;
+  color: gray;
+}
+
+a:hover {
+  text-decoration: none;
+  color: black;
+}
+
+ul {
+  list-style-type: none;
+  cursor: pointer;
+  margin: 0;
+  padding-left: 20px;
+}
+
+#page {
+  padding-left: 25%;
+  background: white;
+}
+
+.container {
+  width: 70%;
+  margin: 0 auto;
+}
+
+.selected {
+  font-weight: bold;
+}
+
+.display {
+  visibility: visible;
+}
+
+//////////// Alerts ////////////////
+
+#user-info {
+  margin-top: 30px;
+  z-index: 10;
+}
+#alerts {
+  margin-top: 60px;
+  height:30px
+}
+//////////// Sidebar content ////////////////
+
+#nav-bar-toggle-button {
+  font-family: 'Megrim', cursive;
+  text-shadow: 1px 1px 1px #000;
+  font-size: 48px;
+  background: #333332;
+  position: fixed;
+  left: 35px;
+  top: 30px;
+  z-index: 1000;
+  cursor: pointer;
+  padding: 15px;
+  color:white;
+}
+
+#nav-bar-content {
+  position: fixed;
+  left: -30%;
+  top: 0;
+  bottom: 0;
+  width: 30%;
+  height: 100%;
+  margin-bottom: -10px;
+  background: #333332;
+  padding: 80px 50px 0 50px;
+  word-wrap: break-word;
+  display: block;
+  overflow: hidden;
+  box-shadow: 2px 0px 10px 1px #ccc;
+  overflow-y:scroll;
+  color:#b3b3b1;
+
+  -webkit-transition: left 750ms ease-in-out;
+  -moz-transition: left 750ms ease-in-out;
+  -ms-transition: left 750ms ease-in-out;
+  -o-transition: left 750ms ease-in-out;
+  transition: left 750ms ease-in-out;
+}
+
+#nav-bar-content.show {
+  left: 0;
+  -webkit-transition: left 750ms ease-in-out;
+  -moz-transition: left 750ms ease-in-out;
+  -ms-transition: left 750ms ease-in-out;
+  -o-transition: left 750ms ease-in-out;
+  transition: left 750ms ease-in-out;
+}
+
+#nav-bar-content h3 {
+  margin-top: 80px;
+}
+
+.feed, .category {
+  color: white;
+  text-shadow: 1px 1px 1px #000;
+}
+
+.feed:hover, .category:hover{
+  color: whitesmoke;
+}
+
+
+//////////// Category form ////////////////
+
+#add-category {
+  margin-bottom: 30px;
+}
+
+#add-category h3, #feeds-section h4 {
+  color: #FBDB0C;
+}
+
+#new-category-submit {
+  background: gray;
+  color: black;
+  border: none;
+}
+
+.delete-button, .delete-cat-button {
+  margin: 0 5px 0 15px;
+  display: inline-block;
+  visibility: hidden;
+  margin-bottom: -2px;
+}
+
+.inline {
+  display: inline-block;
+}
+
+//////////// Feed form ////////////////
+
+#add-feed {
+  text-align: right;
+}
+
+#new-feed-form {
+  margin-top: 40px;
+  width: 100%;
+  border-bottom: 1px solid black;
+  text-align: right;
+}
+
+#add-feed input {
+  border: none;
+  width: 100%;
+  font-size: 150%;
+  text-align: right;
+  padding: 10px 0 10px 10px;
+  color: gray;
+}
+
+#add-feed input:focus {
+  outline: none;
+}
+
+#feed_url {
+  background: white;
+}
+
+//////////// Tag form ////////////////
+
+#tag_name {
+  width: 80%;
+  background: whitesmoke;
+  font-size: 125%;
+  padding: 5px;
+  border: 1px solid black;
+  border-radius: 3px;
+}
+
+#tag-feed {
+  margin-top: 10px;
+  padding: 10px;
+  background: #333332;;
+  color: #FBDB0C;
+  border-radius: 5px;
+}
+
+#tag-feed input:focus {
+  outline: none;
+}
+
+#tag-feed-submit {
+  background: gray;
+  border: none;
+  padding: 8px;
+  border-radius: 3px;
+  color: black;
+  width:19%;
+  box-sizing: border-box;
+}
+
+#tag-feed input {
+  color: black;
+}
+
+//////////// Autocomplete form ////////////////
+
+.ui-autocomplete {
+  background: whitesmoke;
+  border-radius: 0px;
+  width: 300px;
+  border: 1px solid black;
+}
+
+.ui-menu .ui-menu-item{
+  margin: 5px 0px;
+  color: black;
+  font-size: 125%;
+}
