--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,12 +7,32 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
+  <div id='page'>
+    <div class='container'>
+      <header>
+        <div id='user-info'>
+          <% if user_signed_in? %>
+            <%= current_user.email %> | <%= link_to 'Sign Out', destroy_user_session_path, method: :delete %>
+          <% else %>
+            <%= link_to 'Sign in ', new_user_session_path %> | <%= link_to 'Create an Account', new_user_registration_path %>
+          <% end %>
+        </div>
+      </header>
+      <div id='alerts'>
+        <% flash.each do |name, msg| %>
+          <% if msg.is_a?(String) %>
+            <%= content_tag :div, msg, :class => "flash_#{name}" %>
+          <% end %>
+        <% end %>
 
-  <% flash.each do |name, msg| %>
-    <%= content_tag :div, msg, class: name %>
-  <% end %>
+      </div>
 
-<%= yield %>
+      <%= yield %>
+    </div>
+  </div>
+
+  </body>
+</html>
 
 </body>
 </html>
