--- a/app/views/users/_follow_user.html.erb
+++ b/app/views/users/_follow_user.html.erb
@@ -1,6 +1,6 @@
 <% unless user == current_user %>
   <% if current_user.following?(user) %>
-    <%= button_to("Unfollow #{user}", user_follow_path(user.to_param, current_user.get_follow(user).id), :method => :delete, :remote => true) %>
+    <%= button_to("Unfollow #{user.email}", user_follow_path(user.to_param, current_user.get_follow(user).id), :method => :delete, :remote => true) %>
   <% else %>
     <%= button_to("Follow #{user.email}", user_follows_path(user.to_param), :remote => true) %>
   <% end %>
