--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,21 +1,15 @@
-<table>
-  <thead>
-    <tr>
-      <th>user</th>
-      <th>title</th>
-      <th>content</th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @posts.each do |post| %>
-      <tr>
-        <td><%= post.user.email %></td>
-        <td><%= post.title %></td>
-        <td><%= post.content %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
-
 <%= render partial: 'new_post_form' %>
+
+<dl>
+  <% @posts.each do |post| %>
+    <dt><%= link_to post.title, user_posts_path %></dt>
+    <dd><%= truncate(post.content, length: 100) %></dd>
+  <% end %>
+</dl>
+
+<% if params[:show_all].blank? %>
+  <p>
+    Showing updates from the last 7 days.
+    <%= link_to 'Show all posts', user_posts_path(show_all: true) %>
+  </p>
+<% end %>
