--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -59,6 +59,20 @@ ul {
   visibility: visible;
 }
 
+#logo {
+  font-family: 'Audiowide', cursive;
+  text-shadow: 1px 1px 1px #000;
+  font-size: 24px;
+  position: fixed;
+  left: 35px;
+  top: 30px;
+  padding: 15px;
+}
+
+#each_post {
+  padding: 15px;
+}
+
 //////////// Alerts ////////////////
 
 #user-info {
