Minor CSS tweaking 2

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,7 +9,7 @@
 </head>
 <body>
   <div id='logo'>Substance</div>
-  <div id='byline-1'>Write a story, find your circle.</div>
+  <div id='byline'>Write a story, find your circle.</div>
   <div id='page'>
     <div class='container'>
       <header>
