Tweaked index page

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,1 +1,3 @@
-<h3>Write a story, find your circle.</h3>
+<h2>Come on, we won't bite.</h2>
+<p>Substance is a slim, simple version of the average bloging platform.</p>
+<p>Go ahead, make an account. We won't tell anyone.</p>
